--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router": "^7.4.0",
+    "styled-components": "^6.1.16"
   },
   "devDependencies": {
     "@types/react": "^19.0.0",
