feat(podcast-page): create podcast page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,8 @@
     "paths": {
       "@src/*": ["*"],
       "@contexts/*": ["contexts/*"],
-      "@utils/*": ["utils/*"]
+      "@utils/*": ["utils/*"],
+      "@shared/*": ["shared/*"]
     }
   }
 }
