--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "jest test"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.4.0",
@@ -22,13 +23,16 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/jest": "^29.5.14",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "parcel": "^2.14.0"
+    "parcel": "^2.14.0",
+    "ts-jest": "^29.2.6",
+    "typescript": "^5.8.2"
   },
   "browserslist": "> 1%, last 2 versions, not dead"
 }
