--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "date-fns": "^4.1.0",
-    "react": "^19.0.0",
+    "node-fetch": "^3.3.2",
     "react-dom": "^19.0.0",
     "react-router": "^7.4.0",
-    "styled-components": "^6.1.16"
+    "react": "^19.0.0",
+    "styled-components": "^6.1.16",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.26.10",
@@ -22,14 +24,15 @@
     "@babel/preset-typescript": "^7.26.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
     "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/react": "^15.0.7",
     "@types/jest": "^29.5.14",
-    "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "@types/react": "^19.0.0",
     "babel-jest": "^29.7.0",
-    "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
+    "jest": "^29.7.0",
     "parcel": "^2.14.0",
     "ts-jest": "^29.2.6",
     "typescript": "^5.8.2"
