--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "version": "0.0.0",
   "source": "src/index.html",
   "scripts": {
-    "start": "parcel src/index.html",
-    "build": "parcel build src/index.html",
-    "test": "jest test"
+    "dev": "parcel serve src/index.html --no-cache",
+    "prod": "rimraf dist && parcel build src/index.html --public-url ./",
+    "test": "jest test",
+    "lint": "eslint . --fix",
+    "lint:check": "eslint .",
+    "depcheck": "depcheck"
   },
   "dependencies": {
-    "date-fns": "^4.1.0",
-    "node-fetch": "^3.3.2",
     "react-dom": "^19.0.0",
     "react-router": "^7.4.0",
     "react": "^19.0.0",
@@ -24,16 +25,22 @@
     "@babel/preset-typescript": "^7.26.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/react": "^15.0.7",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/jest": "^29.5.14",
-    "@types/react-dom": "^19.0.0",
     "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "babel-jest": "^29.7.0",
+    "depcheck": "^1.4.7",
+    "eslint": "^9.23.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-node": "^11.1.0",
+    "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-fetch-mock": "^3.0.3",
-    "jest": "^29.7.0",
     "parcel": "^2.14.0",
+    "rimraf": "^6.0.1",
     "ts-jest": "^29.2.6",
     "typescript": "^5.8.2"
   },
