--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "dev": "parcel serve src/index.html --no-cache",
     "prod": "rimraf dist && parcel build src/index.html --public-url ./",
+    "serve:prod": "http-server dist",
     "test": "jest test",
     "lint": "eslint . --fix",
     "lint:check": "eslint .",
     "depcheck": "depcheck"
   },
   "dependencies": {
+    "http-server": "^14.1.1",
     "react-dom": "^19.0.0",
     "react-router": "^7.4.0",
     "react": "^19.0.0",
