--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,8 +12,10 @@
   },
   "rules": {
     "no-console": "off",
-    "no-unused-vars": "warn",
-    "prettier/prettier": ["error", { "singleQuote": false, "semi": true }]
+    "@typescript-eslint/no-unused-vars": ["warn"],
+    "prettier/prettier": ["error", { "singleQuote": false, "semi": true }],
+    "@typescript-eslint/explicit-function-return-type": "warn",
+    "@typescript-eslint/explicit-module-boundary-types": "warn"
   },
   "plugins": ["import", "node", "prettier"]
 }
