--- a/package.json
+++ b/package.json
@@ -14,24 +14,19 @@
   },
   "dependencies": {
     "http-server": "^14.1.1",
+    "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.4.0",
-    "react": "^19.0.0",
-    "styled-components": "^6.1.16",
-    "util": "^0.12.5"
+    "styled-components": "^6.1.16"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.10",
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.26.0",
-    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^15.0.7",
-    "@testing-library/react-hooks": "^8.0.1",
     "@types/jest": "^29.5.14",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
+    "@types/react": "^19.0.12",
     "babel-jest": "^29.7.0",
     "depcheck": "^1.4.7",
     "eslint": "^9.23.0",
@@ -43,7 +38,6 @@
     "jest-fetch-mock": "^3.0.3",
     "parcel": "^2.14.0",
     "rimraf": "^6.0.1",
-    "ts-jest": "^29.2.6",
     "typescript": "^5.8.2"
   },
   "browserslist": "> 1%, last 2 versions, not dead"
